--- a/Converter_Control_System.ioc
+++ b/Converter_Control_System.ioc
@@ -12,9 +12,12 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
-Mcu.IP5=TIM6
-Mcu.IP6=TIM7
-Mcu.IPNb=7
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=TIM6
+Mcu.IP8=TIM7
+Mcu.IP9=TIM12
+Mcu.IPNb=10
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -57,22 +60,18 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA7.Mode=PWM Generation1 CH1 CH1N
 PA7.Signal=TIM1_CH1N
-PB0.GPIOParameters=GPIO_Speed,GPIO_Label
+PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1_GREEN
-PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB14.GPIOParameters=GPIO_Speed,GPIO_Label
-PB14.GPIO_Label=LED3_RED
-PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB0.Signal=S_TIM3_CH3
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=LD3_RED
 PB14.Locked=true
-PB14.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_FM7
-PB7.GPIO_FM7=__NULL
+PB14.Signal=S_TIM12_CH1
+PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2_BLUE
-PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB7.Locked=true
-PB7.Signal=GPIO_Output
+PB7.Signal=S_TIM4_CH2
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
@@ -118,21 +117,22 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM6_Init-TIM6-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.AHBFreq_Value=108000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM6_Init-TIM6-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.AHBFreq_Value=216000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
 RCC.APB1TimFreq_Value=108000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=108000000
-RCC.APB2TimFreq_Value=108000000
+RCC.APB2TimFreq_Value=216000000
 RCC.CECFreq_Value=32786.88524590164
-RCC.CortexFreq_Value=108000000
+RCC.CortexFreq_Value=216000000
 RCC.DFSDMAudioFreq_Value=192000000
 RCC.DFSDMFreq_Value=108000000
-RCC.EthernetFreq_Value=108000000
-RCC.FCLKCortexFreq_Value=108000000
+RCC.EthernetFreq_Value=216000000
+RCC.FCLKCortexFreq_Value=216000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=108000000
+RCC.HCLKFreq_Value=216000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=54000000
@@ -140,33 +140,33 @@ RCC.I2C2Freq_Value=54000000
 RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SFreq_Value=192000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFTFreq_Value=96000000
 RCC.LPTIM1Freq_Value=54000000
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=108000000
-RCC.PLLCLKFreq_Value=108000000
+RCC.MCO2PinFreq_Value=216000000
+RCC.PLLCLKFreq_Value=216000000
 RCC.PLLI2SPCLKFreq_Value=192000000
 RCC.PLLI2SQCLKFreq_Value=192000000
 RCC.PLLI2SRCLKFreq_Value=192000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 RCC.PLLM=4
-RCC.PLLN=108
-RCC.PLLQCLKFreq_Value=108000000
-RCC.PLLQoutputFreq_Value=108000000
-RCC.PLLRFreq_Value=108000000
+RCC.PLLN=216
+RCC.PLLQCLKFreq_Value=216000000
+RCC.PLLQoutputFreq_Value=216000000
+RCC.PLLRFreq_Value=216000000
 RCC.PLLSAIPCLKFreq_Value=192000000
 RCC.PLLSAIQCLKFreq_Value=192000000
 RCC.PLLSAIRCLKFreq_Value=192000000
 RCC.PLLSAIoutputFreq_Value=192000000
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.RNGFreq_Value=108000000
+RCC.RNGFreq_Value=216000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
-RCC.SDMMC2Freq_Value=108000000
-RCC.SDMMCFreq_Value=108000000
+RCC.SDMMC2Freq_Value=216000000
+RCC.SDMMCFreq_Value=216000000
 RCC.SPDIFRXFreq_Value=192000000
-RCC.SYSCLKFreq_VALUE=108000000
+RCC.SYSCLKFreq_VALUE=216000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.UART4Freq_Value=54000000
 RCC.UART5Freq_Value=54000000
@@ -176,13 +176,19 @@ RCC.USART1Freq_Value=108000000
 RCC.USART2Freq_Value=54000000
 RCC.USART3Freq_Value=54000000
 RCC.USART6Freq_Value=108000000
-RCC.USBFreq_Value=108000000
+RCC.USBFreq_Value=216000000
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=216000000
+RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
+SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
+SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
 TIM1.DeadTime=255
 TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OC1Preload_PWM,DeadTime,OCNIdleState_1
@@ -191,6 +197,18 @@ TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_SET
 TIM1.Period=62499
 TIM1.Prescaler=15
 TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=31250
+TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM12.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler
+TIM12.Period=65532
+TIM12.Prescaler=3295
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,Period
+TIM3.Period=65532
+TIM3.Prescaler=1647
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation2 CH2,Prescaler,Period
+TIM4.Period=65532
+TIM4.Prescaler=1647
 TIM6.IPParameters=Period,Prescaler
 TIM6.Period=10799
 TIM6.Prescaler=0
