--- a/Converter_Control_System.ioc
+++ b/Converter_Control_System.ioc
@@ -9,6 +9,7 @@ Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=NVIC
+Mcu.IP10=USART3
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
@@ -17,25 +18,27 @@ Mcu.IP6=TIM4
 Mcu.IP7=TIM6
 Mcu.IP8=TIM7
 Mcu.IP9=TIM12
-Mcu.IPNb=10
+Mcu.IPNb=11
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
 Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PB7
-Mcu.Pin11=PE0
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB7
+Mcu.Pin13=PE0
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PH0/OSC_IN
 Mcu.Pin3=PH1/OSC_OUT
 Mcu.Pin4=PA7
 Mcu.Pin5=PB0
 Mcu.Pin6=PE9
-Mcu.Pin7=PB14
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.Pin7=PB11
+Mcu.Pin8=PB14
+Mcu.Pin9=PD8
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -64,6 +67,8 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1_GREEN
 PB0.Locked=true
 PB0.Signal=S_TIM3_CH3
+PB11.Mode=Asynchronous
+PB11.Signal=USART3_RX
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3_RED
 PB14.Locked=true
@@ -76,6 +81,9 @@ PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
 PE0.GPIOParameters=GPIO_Speed,GPIO_Label
 PE0.GPIO_Label=TEST
 PE0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -117,7 +125,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM6_Init-TIM6-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM6_Init-TIM6-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM12_Init-TIM12-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -215,6 +223,10 @@ TIM6.Prescaler=0
 TIM7.IPParameters=Period,Prescaler
 TIM7.Period=62499
 TIM7.Prescaler=1727
+USART3.BaudRate=9600
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate,Parity
+USART3.Parity=PARITY_ODD
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
