--- a/Converter_Control_System.ioc
+++ b/Converter_Control_System.ioc
@@ -1,49 +1,97 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,InjNumberOfConversion
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
+ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.IPParameters=Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-3\#ChannelRegularConversion=1
+ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
+CAN1.BS1=CAN_BS1_4TQ
+CAN1.CalculateBaudRate=562500
+CAN1.CalculateTimeBit=1777
+CAN1.CalculateTimeQuantum=296.2962962962963
+CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1
+CAN2.BS1=CAN_BS1_4TQ
+CAN2.CalculateBaudRate=562500
+CAN2.CalculateTimeBit=1777
+CAN2.CalculateTimeQuantum=296.2962962962963
+CAN2.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=NVIC
-Mcu.IP10=USART3
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=TIM6
-Mcu.IP8=TIM7
-Mcu.IP9=TIM12
-Mcu.IPNb=11
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP10=TIM4
+Mcu.IP11=TIM6
+Mcu.IP12=TIM7
+Mcu.IP13=TIM12
+Mcu.IP14=USART3
+Mcu.IP2=CAN1
+Mcu.IP3=CAN2
+Mcu.IP4=CORTEX_M7
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IP9=TIM3
+Mcu.IPNb=15
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PC14/OSC32_IN
-Mcu.Pin1=PC15/OSC32_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB7
-Mcu.Pin13=PE0
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin2=PH0/OSC_IN
-Mcu.Pin3=PH1/OSC_OUT
-Mcu.Pin4=PA7
-Mcu.Pin5=PB0
-Mcu.Pin6=PE9
-Mcu.Pin7=PB11
-Mcu.Pin8=PB14
-Mcu.Pin9=PD8
-Mcu.PinsNb=17
+Mcu.Pin0=PC13
+Mcu.Pin1=PC14/OSC32_IN
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PF12
+Mcu.Pin13=PF13
+Mcu.Pin14=PF14
+Mcu.Pin15=PF15
+Mcu.Pin16=PG0
+Mcu.Pin17=PG1
+Mcu.Pin18=PE7
+Mcu.Pin19=PE8
+Mcu.Pin2=PC15/OSC32_OUT
+Mcu.Pin20=PE9
+Mcu.Pin21=PE10
+Mcu.Pin22=PE11
+Mcu.Pin23=PB11
+Mcu.Pin24=PB12
+Mcu.Pin25=PB13
+Mcu.Pin26=PB14
+Mcu.Pin27=PD8
+Mcu.Pin28=PD9
+Mcu.Pin29=PA11
+Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=PA12
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=PE0
+Mcu.Pin36=VP_SYS_VS_Systick
+Mcu.Pin37=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin38=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin4=PH1/OSC_OUT
+Mcu.Pin5=PA0/WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA4
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
+MxCube.Version=6.14.0
+MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -57,10 +105,19 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0/WKUP.Signal=ADCx_IN0
+PA1.Signal=ADCx_IN1
+PA11.Mode=CAN_Activate
+PA11.Signal=CAN1_RX
+PA12.Mode=CAN_Activate
+PA12.Signal=CAN1_TX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Signal=ADCx_IN2
+PA3.Signal=ADCx_IN3
+PA4.Signal=ADCx_IN4
 PA7.Mode=PWM Generation1 CH1 CH1N
 PA7.Signal=TIM1_CH1N
 PB0.GPIOParameters=GPIO_Label
@@ -69,14 +126,24 @@ PB0.Locked=true
 PB0.Signal=S_TIM3_CH3
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB12.Mode=CAN_Activate
+PB12.Signal=CAN2_RX
+PB13.Mode=CAN_Activate
+PB13.Signal=CAN2_TX
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3_RED
 PB14.Locked=true
 PB14.Signal=S_TIM12_CH1
+PB3.Locked=true
+PB3.Signal=SYS_JTDO-SWO
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2_BLUE
 PB7.Locked=true
 PB7.Signal=S_TIM4_CH2
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=USER_BTN
+PC13.Locked=true
+PC13.Signal=GPIO_Output
 PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
@@ -84,12 +151,51 @@ PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PD8.Locked=true
 PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=RELAY_GATE
+PD9.Locked=true
+PD9.Signal=GPIO_Output
 PE0.GPIOParameters=GPIO_Speed,GPIO_Label
 PE0.GPIO_Label=TEST
 PE0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE0.Locked=true
 PE0.Signal=GPIO_Output
+PE10.Mode=PWM Generation2 CH2 CH2N
+PE10.Signal=TIM1_CH2N
+PE11.Signal=S_TIM1_CH2
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=H6_ERR
+PE7.Locked=true
+PE7.Signal=GPIO_Input
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=H7_ERR
+PE8.Locked=true
+PE8.Signal=GPIO_Input
 PE9.Signal=S_TIM1_CH1
+PF12.GPIOParameters=GPIO_Label
+PF12.GPIO_Label=H8_ERR
+PF12.Locked=true
+PF12.Signal=GPIO_Input
+PF13.GPIOParameters=GPIO_Label
+PF13.GPIO_Label=H1_ERR
+PF13.Locked=true
+PF13.Signal=GPIO_Input
+PF14.GPIOParameters=GPIO_Label
+PF14.GPIO_Label=H2_ERR
+PF14.Locked=true
+PF14.Signal=GPIO_Input
+PF15.GPIOParameters=GPIO_Label
+PF15.GPIO_Label=H3_ERR
+PF15.Locked=true
+PF15.Signal=GPIO_Input
+PG0.GPIOParameters=GPIO_Label
+PG0.GPIO_Label=H4_ERR
+PG0.Locked=true
+PG0.Signal=GPIO_Input
+PG1.GPIOParameters=GPIO_Label
+PG1.GPIO_Label=H5_ERR
+PG1.Locked=true
+PG1.Signal=GPIO_Input
 PH0/OSC_IN.Mode=HSE-External-Clock-Source
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Clock-Source
@@ -97,6 +203,7 @@ PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
@@ -125,7 +232,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM6_Init-TIM6-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM12_Init-TIM12-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM6_Init-TIM6-false-HAL-true,4-MX_TIM7_Init-TIM7-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM12_Init-TIM12-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true,10-MX_ADC1_Init-ADC1-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true,12-MX_CAN1_Init-CAN1-false-HAL-true,13-MX_CAN2_Init-CAN2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -189,17 +296,30 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC2_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
+SH.ADCx_IN4.0=ADC2_IN4,IN4
+SH.ADCx_IN4.ConfNb=1
 SH.S_TIM12_CH1.0=TIM12_CH1,PWM Generation1 CH1
 SH.S_TIM12_CH1.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
+SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
 TIM1.DeadTime=255
-TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OC1Preload_PWM,DeadTime,OCNIdleState_1
+TIM1.IPParameters=Channel-PWM Generation1 CH1 CH1N,Prescaler,Period,Pulse-PWM Generation1 CH1 CH1N,OC1Preload_PWM,DeadTime,OCNIdleState_1,Channel-PWM Generation2 CH2 CH2N
 TIM1.OC1Preload_PWM=ENABLE
 TIM1.OCNIdleState_1=TIM_OCNIDLESTATE_SET
 TIM1.Period=62499
