--- a/converter-cs.ioc
+++ b/converter-cs.ioc
@@ -32,14 +32,20 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-FDCAN1.CalculateBaudRateNominal=3541666
-FDCAN1.CalculateTimeBitNominal=282
-FDCAN1.CalculateTimeQuantumNominal=94.11764705882354
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
-FDCAN2.CalculateBaudRateNominal=3541666
-FDCAN2.CalculateTimeBitNominal=282
-FDCAN2.CalculateTimeQuantumNominal=94.11764705882354
-FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
+FDCAN1.CalculateBaudRateNominal=499999
+FDCAN1.CalculateTimeBitNominal=2000
+FDCAN1.CalculateTimeQuantumNominal=117.64705882352942
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
+FDCAN1.NominalPrescaler=20
+FDCAN1.NominalTimeSeg1=14
+FDCAN1.NominalTimeSeg2=2
+FDCAN2.CalculateBaudRateNominal=499999
+FDCAN2.CalculateTimeBitNominal=2000
+FDCAN2.CalculateTimeQuantumNominal=117.64705882352942
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
+FDCAN2.NominalPrescaler=20
+FDCAN2.NominalTimeSeg1=14
+FDCAN2.NominalTimeSeg2=2
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32G473CBT6
@@ -98,6 +104,10 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN2_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN2_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
