--- a/converter-cs.ioc
+++ b/converter-cs.ioc
@@ -57,8 +57,9 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP7=TIM6
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32G473C(B-C-E)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13
@@ -90,13 +91,14 @@ Mcu.Pin31=PB9
 Mcu.Pin32=VP_SYS_VS_Systick
 Mcu.Pin33=VP_SYS_VS_DBSignals
 Mcu.Pin34=VP_TIM1_VS_no_output4
+Mcu.Pin35=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA0
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=35
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G473CBTx
@@ -104,19 +106,20 @@ MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.FDCAN1_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN1_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN2_IT0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.FDCAN2_IT1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.FDCAN1_IT0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.FDCAN1_IT1_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.FDCAN2_IT0_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
+NVIC.FDCAN2_IT1_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_3
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SysTick_IRQn=true\:7\:0\:true\:false\:true\:false\:true\:false
+NVIC.TIM1_CC_IRQn=true\:2\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:2\:1\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Locked=true
 PA0.Mode=IN1-Single-Ended
@@ -312,5 +315,7 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_no_output4.Mode=Output Compare4 No Output
 VP_TIM1_VS_no_output4.Signal=TIM1_VS_no_output4
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 isbadioc=false
